# go-guitar2

./: .gitignore  .gitmodules  README.md  mesh_ref.tres  project.godot
.github/: copilot-instructions.md
.github/workflows/: build-gdextension.yml  copilot-setup-steps.yml
.godot/: extension_list.cfg
.godot/imported/: FingerOutline.png-59cd5286e9a8a4f2d62fa00c221e6ed3.ctex  FingerOutline.png-59cd5286e9a8a4f2d62fa00c221e6ed3.md5  GuitarCyan.png-0c0e7e208408a0b631058b4f19bbb390.ctex  GuitarCyan.png-0c0e7e208408a0b631058b4f19bbb390.md5  GuitarGreen.png-8354c5446fc3dc79abe3c28a7b489657.ctex  GuitarGreen.png-8354c5446fc3dc79abe3c28a7b489657.md5  GuitarOrange.png-d3ccce73357ddae9ec0b2a52dd5a6066.ctex  GuitarOrange.png-e445931d71f30b62a2124acba9fbc851.md5  GuitarPurple.png-45be54443e2fbafadd323d43872e3f42.ctex  GuitarPurple.png-45be54443e2fbafadd323d43872e3f42.md5  GuitarRed.png-db0aa73b0b68ff5918c1df30ac560fbd.ctex  GuitarRed.png-db0aa73b0b68ff5918c1df30ac560fbd.md5  GuitarYellow.png-372e97f70430e274ca8b1887977312c0.md5  GuitarYellow.png-9f97fc8a90abb6a31b16c172b08cd002.ctex  Inter_18pt-Bold.ttf-1f8f9856f4c073145002d7db0d83a1e3.fontdata  Inter_18pt-Bold.ttf-1f8f9856f4c073145002d7db0d83a1e3.md5  Inter_18pt-Bold.ttf-930cb0aa673c37dbb608135e682fe0f6.fontdata  Inter_18pt-Bold.ttf-930cb0aa673c37dbb608135e682fe0f6.md5  SingleWhitePixel.png-b63c2457ffb4bcc4a47d0d606077ecdb.md5  VerticalFretLine.png-77fb07e0a67c276fe7cdd3f9a3fead4a.md5  VerticalFretLine.png-a5712ce74c2b38dbb58c8bd1ff13fb54.ctex  mixer_ui_centered_scale.png-a77fd2029a40896151c6ed0b75f5c070.ctex  mixer_ui_centered_scale.png-a77fd2029a40896151c6ed0b75f5c070.md5  note.obj-fd450e6c3a86b8f34276e19701abcbe7.md5  note.obj-fd450e6c3a86b8f34276e19701abcbe7.mesh
ChartPlayer/: README.md
ChartPlayer/SrcTextures/: Inter_18pt-Bold.ttf.import
ChartPlayer/SrcTextures/UserInterface/: FingerOutline.png.import  GuitarCyan.png.import  GuitarGreen.png.import  GuitarOrange.png.import  GuitarPurple.png.import  GuitarRed.png.import  GuitarYellow.png.import  SingleWhitePixel.png.import  VerticalFretLine.png.import
DLC/: README.md  The-Cure-_In-Between-Days-_v2_p.psarc  Tom-Petty-and-the-Heartbreakers_Dont-Do-Me-Like-That_v2_p.psarc
assets/chartplayer_ui/: GuitarDetected.png.import  HorizontalFretLine.png.import  LevelDisplay.png.import  NoteTrailCyan.png.import  NoteTrailGreen.png.import  NoteTrailOrange.png.import  NoteTrailPurple.png.import  NoteTrailRed.png.import  NoteTrailYellow.png.import  PopupBackground.png.import  TabBackground.png.import  TabForeground.png.import  VerticalFretLine.png.import  VerticalPointer.png.import
assets/fonts/: Inter_18pt-Bold.ttf.import  project_theme.tres
assets/models/: note.mtl  note.obj.import
assets/textures/chartplayer/: FingerOutline.png.import  GuitarCyan.png.import  GuitarGreen.png.import  GuitarOrange.png.import  GuitarPurple.png.import  GuitarRed.png.import  GuitarYellow.png.import  SingleWhitePixel.png.import  VerticalFretLine.png.import
docs/: COORDINATE_SYSTEM.md  NOTE_DETECTION.md  Q_FFI.md  ROCKSMITH_2014_API.md
gdextension/: Cargo.toml  README.md  build.rs  build.sh  rocksmith_bridge.gdextension  rocksmith_bridge.gdextension.uid
gdextension/dotnet/: build_bridge.sh  build_shim.sh
gdextension/dotnet/RocksmithBridge/: Exports.cs  RocksmithBridge.csproj
gdextension/dotnet/RocksmithShim/: Exports.cs  RocksmithShim.csproj  TrimmerRoots.xml
gdextension/q_bridge/: q_bridge.cpp  q_bridge.h
gdextension/src/: Cargo.toml  audio_engine.rs  audio_io.rs  audio_mixer.rs  bandpass.rs  build.rs  goguitar_bridge.rs  lib.rs  pitch_detector.rs  q_ffi.rs  q_pitch_detector.rs  q_pitch_ffi.cpp  q_pitch_ffi.h  rocksmith_bridge.rs  rsapi.rs  rt_engine.rs  tone_engine.rs
gdextension/src/crates/audio-engine/: Cargo.toml
gdextension/src/crates/audio-engine/src/: lib.rs
gdextension/src/crates/audio-io/: Cargo.toml
gdextension/src/crates/audio-io/src/: lib.rs
gdextension/src/crates/audio-mixer/: Cargo.toml
gdextension/src/crates/audio-mixer/src/: lib.rs
gdextension/src/crates/rsapi/: Cargo.toml
gdextension/src/crates/tone-engine/: Cargo.toml
gdextension/src/src/: audio_engine.rs  audio_engine_core.rs  lib.rs  psarc_parser.rs  rocksmith_bridge.rs  rs_net_ffi.rs  rt_engine.rs
gdextension/tests/: rock_dataset_tests.rs
goguitar/: goguitar_bridge.gdextension
scenes/: background.tscn  chartplayer_reference_hud.tscn  chord.tscn  chord_pool.tscn  fretboard.tscn  game_menu.tscn  gg_music_highway.tscn  highway.tscn  mixer.tscn  mixer_strip.tscn  music_play.tscn  music_play_demo.tscn  note.tscn  note_pool.tscn  number_0.tscn  number_1.tscn  number_2.tscn  number_3.tscn  number_4.tscn  number_5.tscn  number_6.tscn  number_7.tscn  number_8.tscn  number_9.tscn  song_list.tscn
screenshots/: gg_music_highway_run_1.png.import  gg_music_highway_run_2.png.import  gg_music_highway_run_3.png.import  gg_music_highway_run_4.png.import  mixer_ui_centered_scale.png.import  music_play_1.png.import  music_play_2.png.import  music_play_3.png.import  music_play_4.png.import  music_play_5.png.import  music_play_run_1.png.import  music_play_run_2.png.import  music_play_run_3.png.import
scripts/: chartplayer_reference_hud.gd  chord.gd  chord_pool.gd  common.gd  fretboard.gd  game_menu.gd  game_state.gd  gg_music_highway.gd  goguitar_bridge.gd  highway.gd  highway.gd.uid  mixer.gd  music_play.gd  music_play.gd.uid  music_play_demo.gd  music_play_demo.gd.uid  note.gd  note.gd.uid  note_detection.gd  note_pool.gd  note_pool.gd.uid  note_timeline.gd  rs_bridge.gd  rs_bridge.gd.uid  score.gd  song_list.gd
shaders/: background.gdshader  background.gdshader.uid  gg_music_highway_lane_mask.gdshader  highway.gdshader  highway.gdshader.uid  note.gdshader  note.gdshader.uid  string_glow.gdshader
tests/: README.md  test_chart_common.gd  test_gdextension.gd  test_note_detection_score.gd
tests/note-detection/: README.md  test_note_detection_dataset.gd  test_note_detection_strings.gd
tests/note-detection/dataset/: README.md
